<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<org.chromium.chrome.browser.widget.ListMenuButton
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/selectable_list_layout_row_padding"
    android:paddingEnd="@dimen/selectable_list_layout_row_padding"
    android:background="@null"
    android:src="@drawable/ic_more_vert_black_24dp"
    app:tint="@color/standard_mode_tint"
    tools:ignore="ContentDescription" />
