<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.chrome.browser.history.HistoryItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chrome="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/content"
        style="@style/ListItemContainer" >

        <include layout="@layout/modern_list_item_view" />

        <org.chromium.chrome.browser.widget.TintedImageButton
            android:id="@+id/remove"
            style="@style/HistoryListItemEndIcon"
            android:contentDescription="@string/remove"
            android:src="@drawable/btn_delete_24dp"
            chrome:chrometint="@color/black_alpha_38" />
    </LinearLayout>

</org.chromium.chrome.browser.history.HistoryItemView>