<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accept_language_list_container"
    style="@style/PreferenceLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:padding="0dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pref_languages_padding"
        android:text="@string/languages_list_prefs_description" />

    <FrameLayout
        android:id="@android:id/widget_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/add_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/pref_languages_padding"
        android:paddingStart="@dimen/pref_languages_add_button_padding"
        android:drawablePadding="@dimen/pref_languages_add_button_padding"
        android:text="@string/prefs_add_language"
        style="@style/PreferenceLayout" />

</LinearLayout>
