<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<!-- Do not replace this with TextViewWithCompoundDrawables
     https://crbug.com/1053448 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    style="@style/ListMenuItemStyle"
    android:minHeight="?android:attr/listPreferredItemHeightSmall" >

    <org.chromium.ui.widget.ChromeImageView
        android:id="@+id/menu_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/default_icon_color_secondary" />

    <TextView
        android:id="@+id/menu_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.ListMenuItem" />

    <org.chromium.ui.widget.ChromeImageView
        android:id="@+id/menu_item_end_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:tint="@color/default_icon_color_secondary" />

</LinearLayout>
